--- a/src/examples/data-json/README
+++ b/src/examples/data-json/README
@@ -2,4 +2,4 @@ This data-json is fetched olympicData when count is 30
 
 http://localhost:5173/?count=30
 
-I leave this data to clarify what data is in meta field.
+I leave this data to clarify what data is in the meta field.
